--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.application.name=account
 spring.datasource.url=jdbc:mysql://localhost:3306/account
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
 
 # show SQL
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # test -> create, deploy -> update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
